# attitude

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  build.py  conanfile.txt  pyproject.toml  tasks.py
docs/: CMakeLists.txt  Doxyfile.in  conf.py
include/: types.h  utils.h
include/attitude/: config.h.in  euler_angles.h  quaternion.h  rotation_matrix.h  rotation_vector.h  types.h  utils.h
src/: config.h.in  lib.cpp  types.cpp  version.h.in
src/attitudexx/: binding.cpp
tests/: test_euler_angles.cpp  test_performance.cpp  test_quaternion.cpp  test_rotation_matrix.cpp  test_rotation_vector.cpp  test_types.cpp
tests/attitude/: test_attitude.py
tests/attitudexx/: test_types.cpp
