[tool.poetry]
name = "attitude"
version = "0.1.0"
description = "Library for manipulating object orientation, location, motion and rotation"
authors = ["Jaap Versteegh <j.r.versteegh@gmail.com>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"
cmake = "^3.31.2"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
conan = "^2.11.0"
breathe = "^4.35.0"
gitpython = "^3.1.43"
isort = "^5.13.2"
black = "^24.10.0"
ipython = "^8.31.0"
pytest = "^8.3.4"
gcovr = "^8.2"
pytest-cov = "^6.0.0"
clang-format = "^19.1.5"
pybind11 = "^2.13.6"
tomli = "^2.2.1"
setuptools = "^75.8.0"

[tool.poetry.extras]
docs = ["Sphinx"]

[tool.black]
extend_exclude = ''

[tool.isort]
profile = "black"
known_first_party = ["attitude"]
skip = ["__init__.py"]
extend_skip_glob = ["venv", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = """\
    --cov-report=term-missing:skip-covered \
    --cov-report=html \
    --cov-report=xml \
    """
filterwarnings = "ignore::DeprecationWarning"

[tool.coverage]
run = { source = ["attitude"], branch = true, omit = [] }
html = { directory = "build/pytest_coverage" }
xml = { output = "build/pytest_coverage.xml" }


[tool.poetry.build]
script = "build.py"
generate-setup-file = true


[build-system]
requires = ["poetry-core", "setuptools", "wheel", "cmake", "tomli", "gitpython", "conan"]
build-backend = "poetry.core.masonry.api"
